syntax = "proto3";

package team.messenger.messenger.v1alpha1;

import "team/messenger/messenger/v1alpha1/user.types.proto";

message CreateUserRequest {
  string name = 1;
}

message CreateUserResponse {
  string id = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}
